# agent-can

./: .gitignore  AGENTS.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/agent_can/: __init__.py  backend.py  dbc.py  protocol.py  selectors.py  server.py  session.py
src/agent_can_py/: __init__.py  backend.py  dbc.py  protocol.py  selectors.py  server.py  session.py
tests/: test_session.py
